--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,8 @@
 [build]
   command = "npm install && npm run build"
-  publish = ".next/static"
+  publish = "out"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps"
-
-# Configuração para Next.js sem plugin
-[functions]
-  node_bundler = "esbuild"
-
-# Redirects para SPA behavior
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
 
